<resources>

    <string name="app_name">VGroup</string>
    <string name="hello_world">SJH SJH SJH</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">bbbbb</string>
    <string name="getposition">获取位置中....</string>
    <string name="public_friend">公开</string>
    <string name="private_friend">不公开</string>
    <string name="title_activity_main">VGroup</string>
    <string name="filename">http://192.168.96.5:8080/web/oppo.3gp</string>
    <string name="filenoexsit">视频文件不存在</string>
    <string name="position_square">square</string>
	<string name="position_friendgroup">friendgroup</string>
	<string name="position_talkgroup">talkgroup</string>
	<string name="position_person">person</string>
	<string name="position_blink">blink</string>	
	<string name="record_record_recordbutton">录制</string>
	<string name="record_record_stopbutton">停止</string>
	<string name="success">上传成功</string>
    <string name="notexsit">文件不存在</string>
    <string name="error">上传失败</string>
    <string name="choose_classfication">选择视频类别</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <string name="submit_shareGroupOriginalString">要分享的讨论组</string>
    <string name="submit_classificationOriginalString">添加视频分类</string>
    <string name="loading">数据加载中...</string>
    <string name="nomore">没有更多数据啦...</string>
    <string name="concern_yes">已关注</string>
    <string name="concern_no">未关注</string>
    <string name="damaku_show">显示</string>
    <string name="damaku_close">关闭</string>
    <string name="tag_topstring">编辑我的Tag</string>
    
    <!-- 群组String -->
    <string name="groupcreator_head">群组创建者：</string>
    <string name="current_applyNumHead">当前申请人数：</string>
    <string name="numAndLimit">组员/上限(人):</string>
    <!-- 群组Item String -->
    <string name="accecpt">接受</string>
    <string name="delete">删除</string>
    
    <string name="update_at">updated at:&#160;</string>
    <string name="github">GitHub</string>
    <string name="github_tip">TrineaAndroidCommon on GitHub</string>
    
    <string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    
    <string name="image_content">Image</string>
    
    <string name="drop_down_tip">Pull down to refresh or scroll to bottom to load more</string>
    <string name="on_border_tip">Scroll to top or bottom to experience</string>
    
    
    <string name="hint">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="imageview_content_description"></string>
    <string name="record_camera_title">拍摄</string>
    <string name="record_camera_back">返回</string>
    <string name="record_camera_next">下一步</string>
    <string name="record_camera_back_delete">回删</string>
    <string name="record_camera_delay">延迟</string>
    <string name="record_camera_filter">滤镜</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_check_available_faild">手机满了！至少需要200M存储空间才能继续拍摄！</string>
    <string name="record_camera_open_audio_faild">无法打开录音设备！</string>
    <string name="record_camera_save_faild">视频信息保存失败！</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="record_camera_import">导入</string>
    <string name="record_camera_import_image">照片</string>
    <string name="record_camera_import_image_choose">从本地照片选择</string>
    <string name="record_camera_import_image_faild">导入照片失败</string>
    <string name="record_camera_import_video">视频</string>
    <string name="record_camera_import_video_title">截\t取</string>
    <string name="record_camera_import_video_choose">从本地视频选择</string>
    <string name="record_camera_import_video_faild">导入视频失败</string>
    <string name="record_camera_tools_focus">焦点</string>
    <string name="record_camera_tools_led">闪光</string>
    <string name="record_camera_ghost">幽灵</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_video_transcoding_success">视频保存在:%s</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="record_preview_theme">主题</string>
    <string name="record_preview_title">预览</string>
    <string name="record_preview_theme_original">原始</string>
    <string name="record_preview_theme_news">新闻</string>
    <string name="record_preview_theme_goddess">女神</string>
    <string name="record_preview_theme_recording">录制</string>
    <string name="record_preview_theme_bsmall">小黄人</string>
</resources>