<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
<RelativeLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="#eeeeee"
  android:descendantFocusability="blocksDescendants">
     	   
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:id="@+id/talkgroup_item_toplayout">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="10dp"
           android:text="发布时间："
           android:textColor="#333333"		    
   		   android:textStyle="bold"
           android:id="@+id/talkgroup_item_time_head"
           android:layout_centerVertical="true"
   		   android:layout_alignParentLeft="true"
   		   android:layout_marginLeft="20dp">
           
       </TextView>
       
       <TextView 
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:id="@+id/talkgroup_item_time"
   			    android:text="7月21日"
   			    android:textSize="10dp"
   			    android:textColor="#333333"		    
   		        android:textStyle="bold"
   		        android:layout_toRightOf="@id/talkgroup_item_time_head"
   		         android:layout_centerVertical="true"
   			    android:gravity="right"
   			    /> 

    	  <TextView 
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:text="次播放" 
   			    android:id="@+id/talkgroup_item_playNumtail"   
   			    android:layout_centerVertical="true"	     
   			    android:textSize="10dp"
   			    android:textColor="#333333"		    
   		        android:textStyle="bold"
   		        android:layout_marginRight="10dp"
   		        android:layout_alignParentRight="true"
   			    /> 
	   	 <TextView 
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:id="@+id/talkgroup_item_playNum"
   			    android:text="18.5万"
   			    android:textSize="10dp"
   		   	    android:textColor="#333333"		    
   		        android:textStyle="bold"
   		        android:layout_centerVertical="true"
				android:layout_toLeftOf="@id/talkgroup_item_playNumtail"
   			    />
   		   <LinearLayout
   		       android:layout_width="fill_parent" 
   		       android:layout_height="1dp"
   		       android:layout_alignParentBottom="true"
   		       android:background="#5E2931"
   		       android:layout_marginBottom="3dp"
   		       ></LinearLayout>   
    </RelativeLayout>

    
    <FrameLayout
 	     android:layout_width="fill_parent"
    	 android:layout_height="400dp"
    	 android:id="@+id/talkgroup_item_layout_frame"
    	 android:layout_below="@id/talkgroup_item_toplayout"
    	>
    <RelativeLayout
    	   android:layout_width="fill_parent"
    	   android:layout_height="400dp">
    	 
    	 <SurfaceView
    	 android:layout_width="fill_parent"
    	 android:layout_height="350dp"
    	android:id="@+id/talkgroup_item_surfaceView"
    	/>
     	 <master.flame.danmaku.ui.widget.DanmakuSurfaceView
        	android:id="@+id/talkgroup_item_sv_danmaku"
        	android:layout_width="fill_parent"
       		android:layout_height="310dp" />
    
        <ImageView
          android:layout_width="fill_parent"
    	  android:layout_height="350dp"
    	  android:scaleType="fitXY"
    	  android:id="@+id/talkgroup_item_videoimageView"
            />

		<ImageView 
		   android:layout_width="fill_parent"
    	   android:layout_height="50dp"
    	   android:layout_alignParentBottom="true"
    	   android:layout_marginBottom="46dp"
		   android:src="@drawable/square_item_videobar" 
		    /> 
    	 <cn.edu.xmu.ForDream.util.RoundImageView
    	     android:layout_width="40dp"
    	     android:layout_height="40dp"
    	     android:layout_alignParentBottom="true"
    	     android:layout_marginBottom="50dp"
    	     android:layout_marginLeft="20dp"
    	     android:id="@+id/talkgroup_item_groupImg"    	    
    	     android:background="@drawable/square_item_headbackground"/>
    	<TextView 
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:id="@+id/talkgroup_item_groupName"
   			    android:layout_toRightOf="@id/talkgroup_item_groupImg"
   			    android:layout_alignTop="@id/talkgroup_item_groupImg"
   			    android:layout_marginTop="10dp"
   			    android:layout_marginLeft="5dp"
   			    android:text="Jonsen"
   			    android:textColor="#333333"/>
 
    	  <RelativeLayout
    	      android:layout_width="30dp"
    	      android:layout_height="50dp" 
    	      android:layout_alignParentRight="true"
    	      android:layout_marginRight="5dp"
    	      android:layout_alignParentBottom="true"
    	      android:layout_marginBottom="15dp"
    	      android:id="@+id/talkgroup_item_reportlayout">
    	 <ImageView 
    	     android:layout_width="30dp"
    	     android:layout_height="30dp"
    	     android:id="@+id/talkgroup_item_report"/>			 
  
    	      
    	  </RelativeLayout>      

    		  <RelativeLayout
    	      android:layout_width="30dp"
    	      android:layout_height="50dp" 
    	      android:layout_toLeftOf="@id/talkgroup_item_reportlayout" 
    	       android:layout_marginRight="5dp"
    	       android:layout_alignTop="@id/talkgroup_item_reportlayout"
    	      android:id="@+id/talkgroup_item_danmakulayout">
    	 <ImageView 
    	     android:layout_width="30dp"
    	     android:layout_height="30dp"
    	     android:id="@+id/talkgroup_item_danmaku"/>			 
    	 <TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:id="@+id/talkgroup_item_danmakuisshow"
   		    android:layout_centerHorizontal="true"
   		    android:text="@string/damaku_close"
   		    android:layout_below="@id/talkgroup_item_danmaku"   		    		    
   		    android:textColor="#333333"
   		    android:textSize="10dp"   		   
   		    android:textStyle="bold"/>   
    	      
    	  </RelativeLayout>
  	
    	 <RelativeLayout
    	      android:layout_width="30dp"
    	      android:layout_height="50dp" 
    	      android:layout_toLeftOf="@id/talkgroup_item_danmakulayout" 
    	       android:layout_marginRight="5dp"
    	       android:layout_alignTop="@id/talkgroup_item_danmakulayout"
    	      android:id="@+id/talkgroup_item_commentlayout">
    	  <ImageView 
    	     android:layout_width="30dp"
    	     android:layout_height="30dp"
    	     android:id="@+id/talkgroup_item_comment"/> 
		 <TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:id="@+id/talkgroup_item_commentNum"
   		    android:textSize="10dp"
   		    android:layout_below="@id/talkgroup_item_comment"
   		    android:layout_centerHorizontal="true"
   		    android:textColor="#333333"		    
   		    android:textStyle="bold"/>     	     
    	 </RelativeLayout>
		

    	   
		 <RelativeLayout
    	      android:layout_width="30dp"
    	      android:layout_height="50dp" 
    	      android:layout_toLeftOf="@id/talkgroup_item_commentlayout" 
    	       android:layout_marginRight="5dp"
    	       android:layout_alignTop="@id/talkgroup_item_commentlayout"
    	      android:id="@+id/talkgroup_item_applylayout">    	   
		 <ImageView 
		     android:layout_width="30dp"
    	     android:layout_height="30dp"    	     
    	     android:id="@+id/talkgroup_item_apply"/>
      	  <TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:id="@+id/talkgroup_item_concern_text"
   		    android:textSize="10dp"
   		    android:layout_below="@id/talkgroup_item_apply"
   		    android:layout_centerHorizontal="true"	 
   		    android:textColor="#333333"		    
   		    android:textStyle="bold"/> 
 		</RelativeLayout>

    	<LinearLayout 
   		    android:layout_height="20dp"
   		    android:layout_width="wrap_content"
   		    android:layout_alignParentBottom="true"
   		    android:id="@+id/talkgroup_item_original_author_head"
   		    android:layout_marginLeft="20dp"
   		    android:layout_marginBottom="10dp"
   		    >
    	   <TextView 
   		     android:text="@string/groupcreator_head"
   		     android:layout_height="20dp"
   		     android:layout_width="wrap_content"
   		     android:textSize="12dp"
   		     android:textColor="#333333"
   		     android:textStyle="bold"/> 
   		    <TextView 
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:layout_centerVertical="true"
   		        android:id="@+id/talkgroup_item_group_creator"
   		        android:layout_marginLeft="1dp"
   		        android:textSize="12dp"
   		        android:textColor="#333333"
   		        android:textStyle="bold"/>
    	  </LinearLayout>    

    	</RelativeLayout>
    </FrameLayout>
   		<TextView 
   		    android:id="@+id/talkgroup_item_introduce"
   		    android:layout_width="320dp"
   		    android:layout_height="wrap_content"
   		    android:text="I will love you till the end of time.I would wait a million years"
   		    android:layout_below="@id/talkgroup_item_layout_frame"
   		    android:layout_marginLeft="20dp"
   		    android:textColor="#000000"/>
   		<RelativeLayout 
   		    android:layout_height="30dp"
   		    android:layout_width="fill_parent"
   		    android:layout_below="@id/talkgroup_item_introduce"
   		    android:layout_marginTop="10dp"
   		    android:id="@+id/talkgroup_item_belowvedio"
   		    >
   		<LinearLayout 
   		    android:layout_height="20dp"
   		    android:layout_width="wrap_content"
   		    android:layout_centerVertical="true"
   		    android:layout_alignParentRight="true"
   		    android:id="@+id/talkgroup_item_choose_vediocategory"
   		    android:layout_marginRight="20dp"
   		    >
    	   <ImageView 
   		     android:src="@drawable/square_item_label"
   		     android:layout_height="20dp"
   		     android:layout_width="20dp"/> 
   		    <TextView 
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:layout_centerVertical="true"
   		        android:id="@+id/talkgroup_item_vediocategory"
   		        android:layout_marginLeft="1dp"/>
    	  </LinearLayout>
   		<LinearLayout 
   		    android:layout_height="wrap_content"
   		    android:layout_width="wrap_content"
   		    android:layout_centerVertical="true"
   		    android:layout_alignParentLeft="true"
   		    android:id="@+id/talkgroup_item_positionlayout"
   		    android:layout_marginLeft="5dp"
   		    >
    	   <ImageView 
   		     android:src="@drawable/square_item_setposition"
   		     android:layout_height="10dp"
   		     android:layout_width="10dp"
   		     /> 
   		    <TextView 
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:layout_centerVertical="true"
   		        android:textSize="10dp"
   		        android:textStyle="bold"
   		        android:id="@+id/talkgroup_item_setpositionTextView"
   		        android:layout_marginLeft="1dp"/>
    	  </LinearLayout>
   		    
   		</RelativeLayout>
  	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:layout_below="@id/talkgroup_item_belowvedio">
 	  <LinearLayout
   		android:layout_width="fill_parent" 
   		android:layout_height="1dp"
   		android:background="#5E2931"/>
 	   <RelativeLayout
   		android:layout_width="fill_parent" 
   		android:layout_height="30dp">
   		<RelativeLayout
   		    android:layout_width="140dp"
   		    android:layout_height="20dp"
   		    android:layout_centerVertical="true">
   		<TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:id="@+id/talkgroup_item_applyhead"
   		    android:layout_alignParentLeft="true"
   		    android:layout_marginLeft="10dp"
   		    android:layout_centerVertical="true"
   		    android:text="@string/current_applyNumHead"
   		     android:textSize="12dp"
   		     android:textColor="#333333"
   		     android:textStyle="bold"/>
   		   		<TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_toRightOf="@id/talkgroup_item_applyhead"
   		    android:layout_alignTop="@id/talkgroup_item_applyhead"
   		    android:id="@+id/talkgroup_item_applyNum"
   		    android:text="123"
   		    android:textSize="12dp"
   		    android:textColor="#333333"
   		    android:textStyle="bold"/>
   		</RelativeLayout>
 	    <LinearLayout
   			android:layout_width="1dp" 
   			android:layout_height="20dp"
   			android:layout_centerInParent="true"   	
   			android:orientation="vertical"		
   			android:background="#5E2931"
   			android:id="@+id/talkgroup_item_partitioning"/>
 	    <RelativeLayout
 	        android:layout_width="140dp"
 	        android:layout_height="20dp"
 	        android:layout_toRightOf="@id/talkgroup_item_partitioning"
 	        android:layout_centerVertical="true">
   		   	<TextView 
   		   	    android:layout_width="wrap_content"
   		   	    android:layout_height="wrap_content"
   		   	    android:text="@string/numAndLimit"
   		   	    android:layout_centerVertical="true"
   		    	android:textSize="12dp"
   		  		android:textColor="#333333"
   		   		android:textStyle="bold"
   		   		android:id="@+id/talkgroup_item_limitHead"
   		   		android:layout_marginLeft="20dp"
   		   	    />
   		   	<TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_toRightOf="@id/talkgroup_item_limitHead"
   		    android:layout_alignTop="@id/talkgroup_item_limitHead"
   		    android:id="@+id/talkgroup_item_grouperNum"
   		    android:text="123"
   		    android:layout_marginLeft="10dp"
   		    android:textSize="12dp"
   		    android:textColor="#333333"
   		    android:textStyle="bold"/>
   		   <TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_toRightOf="@id/talkgroup_item_grouperNum"
   		    android:layout_alignTop="@id/talkgroup_item_grouperNum"
   		    android:id="@+id/talkgroup_item_grouperNum_partitioning"
   		    android:text="/"
   		    android:layout_marginLeft="3dp"
   		    android:textSize="12dp"
   		    android:textColor="#333333"
   		    android:textStyle="bold"/>
   		   <TextView 
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_toRightOf="@id/talkgroup_item_grouperNum_partitioning"
   		    android:layout_alignTop="@id/talkgroup_item_grouperNum_partitioning"
   		    android:id="@+id/talkgroup_item_grouperLimit"
   		    android:text="222"
   		    android:layout_marginLeft="3dp"
   		    android:textSize="12dp"
   		    android:textColor="#333333"
   		    android:textStyle="bold"/>   		   
 	    </RelativeLayout>
 	    </RelativeLayout>
   		   <RelativeLayout
   			android:layout_width="fill_parent" 
   			android:layout_height="10dp">    		
    		<LinearLayout
   		       android:layout_width="fill_parent"
   		       android:layout_height="1dp"
   		  	   android:layout_alignParentTop="true"
   		  	   android:background="#5E2931"/>
   		   <LinearLayout
   			android:layout_width="fill_parent" 
   			android:layout_height="5dp"
   			android:layout_centerVertical="true"			
   			android:background="#A97A72"/>  		       
   		   <LinearLayout
   		       android:layout_width="fill_parent"
   		       android:layout_height="1dp"
   		  	   android:layout_alignParentBottom="true"
   		  	   android:background="#5E2931"/>   
   		   </RelativeLayout>

   	
 	</LinearLayout>
</RelativeLayout>
</LinearLayout>